# looparchitect-backend-api

./: .env.example  .env.production.example  .gitignore  00_FILE_MANIFEST.md  =1.15.0  API_QUICK_REFERENCE.md  API_REFERENCE.md  ARRANGEMENT_API_USAGE.md  ARRANGEMENT_EVOLUTION_REPORT.md  ARRANGEMENT_IMPLEMENTATION.md  ARRANGEMENT_LOGIC.md  ARRANGEMENT_QUALITY_AUDIT.md  ASYNC_RENDER_CHECKLIST.md  ASYNC_RENDER_IMPLEMENTATION.md  AUDIBLE_DSP_EFFECTS_IMPLEMENTATION.md  BACKEND_PIPELINE.md  BACKEND_VERIFICATION.md  BACKEND_WORKER_HEALTH_REPORT.md  BEAT_GENOME_COMPLETION.md  BEAT_GENOME_SCHEMA.md  BEFORE_YOU_START.md  CODE_VERIFICATION.md  COMPLETION_REPORT.md  CRASH_FIX_REPORT.md  DATABASE_MIGRATION.md  DATABASE_SCHEMA_MIGRATION.md  DEBUG_REAL_RENDER_PATH.md  DELIVERABLES_INDEX.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_FINAL_REPORT.md  DEPLOYMENT_PRODUCER_SYSTEM.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  DEPLOY_RAILWAY.md  DIFF_REPORT.md  DOCUMENTATION_INDEX.md  DOWNLOAD_TESTING_GUIDE.md  Dockerfile  (+180 more)
app/: config.py  db.py  main.py  print_requirements.py  pyproject.toml  queue.py
config/: vibe_modifier_rules.json
docs/: PHASE_1_TRUTH_REPORT.md  PHASE_2_DIAGNOSTIC_REPORT.md  PHASE_3_IMPLEMENTATION_PLAN.md  PHASE_3_PATTERN_GENERATION.md  SMOKE_STYLE_ENGINE_V2.md  STYLE_ENGINE_PLAN.md  STYLE_ENGINE_V2_PLAN.md  production_smoke_tests.md
looparchitect-frontend/: .env.local.example  .env.production.example  package-lock.json  package.json  tsconfig.json  vitest.config.ts
migrations/: env.py
scripts/: check_deps.py  cleanup_orphan_loops.py  (+6 more)
(+486 files in other folders)
