[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "looparchitect-backend-api"
version = "1.0.0"
description = "LoopArchitect Backend API - Audio Loop Management and Arrangement Engine"
requires-python = ">=3.11"
authors = [
    {name = "LoopArchitect Team"},
]
license = {text = "MIT"}
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.0",
    "SQLAlchemy>=2.0",
    "psycopg2-binary>=2.9",
    "python-multipart",
    "pydub>=0.25.1",
    "ffmpeg-python>=0.2.0",
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "alembic>=1.13.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "smoke: smoke tests for basic functionality",
    "integration: integration tests requiring external services",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
